--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -2,12 +2,8 @@
   url: /
   external: false
 
-- title: archive
-  url: /archive/
-  external: false
-
-- title: about
-  url: /about/
+- title: Teaching
+  url: /teaching/
   external: false # set true if you using external link, see below
 
 # Example:
